--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="NTj-DO-Vky" id="vFP-eN-Iym"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="R3U-XK-Rah"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="R3U-XK-Rah">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="RBB-q4-r4H">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="NTj-DO-Vky" id="hUR-wc-mPG"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7YL-o6-aUB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
